sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: value ++ is not a member of Int
			i++
                         ^AlgGnomeSort:9: error: value -- is not a member of Int
			i--
                         ^AlgGnomeSort:13: error: value -- is not a member of Int
			i--
                         ^AlgGnomeSort:15: error: value ++ is not a member of Int
			i++
                         ^